# wdf-bakeoff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  test_utils.h
src/ciaramella_out/: crm_lpf2.cpp  crm_lpf2.h
src/ciaramella_wdf/: lpf2.crm
src/cpp_poly_wdf/: bassman.h  diode_clipper.h  ff2.h  lpf2.h
src/cpp_wdf/: bassman.h  baxandall.h  diode_clipper.h  ff2.h  lpf2.h  pultec.h
src/faust_out/: faust_bassman.h  faust_baxandall.h  faust_dc.h  faust_lpf2.h  faust_pultec.h
src/faust_wdf/: bassman.dsp  baxandall.dsp  faustMinimal.h  faust_ff2.h  ff2.cpp  ff2.dsp  lpf2.cpp  lpf2.dsp  pultec.dsp
src/rt_wdf/: bassman.h  baxandall.h  ff2.h  lpf2.h
